# c-audio-visualizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
src/: CMakeLists.txt  helpers.cpp  helpers.h  wavparse.cpp  wavparse.h
